[project]
name = "lune"
version = "0.1.0"
description = ""
authors = [
    {name = "max",email = "cyan0908@163.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group."tool.poetry.group.grpc".dependencies]
grpcio = "^1.69.0"
grpcio-tools = "^1.69.0"


[tool.poetry.group."tool.poetry.group.validation".dependencies]
pydantic = "^2.10.5"

